@@ -1,3 +1,8 @@
+2010-08-27  Doug Evans  <dje@google.com>
+
+	* dwarf2read.c (dwarf2_per_objfile_free): Reorganize buffers to match
+	the order they're defined in.  munmap .debug_types buffer.
+
 2010-08-26  Doug Evans  <dje@google.com>
 
 	* dwarf2read.c (dw2_require_full_path): Rename parameter cu to per_cu.
